--- a/data/covers.yml
+++ b/data/covers.yml
@@ -1,8 +1,8 @@
-- images/cover/bg1.png
-- images/cover/bg2.png
-- images/cover/bg3.png
-- images/cover/bg4.png
-- images/cover/bg5.png
-- images/cover/bg6.png
-- images/cover/bg7.png
-- images/cover/bg8.png
+- /blog/images/cover/bg1.png
+- /blog/images/cover/bg2.png
+- /blog/images/cover/bg3.png
+- /blog/images/cover/bg4.png
+- /blog/images/cover/bg5.png
+- /blog/images/cover/bg6.png
+- /blog/images/cover/bg7.png
+- /blog/images/cover/bg8.png
